--- a/.github/workflows/deploy_vuepress.yml
+++ b/.github/workflows/deploy_vuepress.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest # 指定运行所需要的虚拟机环境（必填）
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@master
+      
       - name: vuepress-deploy
         uses: jenkey2011/vuepress-deploy@master
         env:
