--- a/.github/workflows/deploy_vuepress.yml
+++ b/.github/workflows/deploy_vuepress.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_REPO: fncheng/blog
-          TARGET_BRANCH: master
+          TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: yarn && yarn docs:build
           BUILD_DIR: docs/.vuepress/dist
           # CNAME: https://www.xxx.com
