--- a/.github/workflows/deploy_vuepress.yml
+++ b/.github/workflows/deploy_vuepress.yml
@@ -16,7 +16,7 @@ jobs:
       - name: vuepress-deploy
         uses: jenkey2011/vuepress-deploy@master
         env:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACTION_SECRET }}
           TARGET_REPO: fncheng/blog
           TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: yarn && yarn docs:build
