--- a/.github/workflows/deploy_vuepress.yml
+++ b/.github/workflows/deploy_vuepress.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   docs:
     runs-on: ubuntu-latest # 指定运行所需要的虚拟机环境（必填）
+    if: ${{ github.event_name == 'push' && contains(github.event.head_commit.message, '[build]')}}
 
     steps:
       - name: Checkout
