--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fncheng/vuepress-plugin-side-anchor": "^1.0.8",
     "@vuepress/plugin-active-header-links": "^1.8.2",
     "@vuepress/plugin-back-to-top": "^1.8.2",
-    "vuepress": "^1.8.2"
+    "@vuepress/types": "^1.9.9",
+    "vuepress": "^1.9.9"
   }
 }
