--- a/.github/workflows/deploy_vuepress.yml
+++ b/.github/workflows/deploy_vuepress.yml
@@ -4,23 +4,33 @@ on:
   push:
     branches:
       - master
-    path:
+    paths:
       - '**'
-    
       
 jobs:
   docs:
-    runs-on: ubuntu-latest # 指定运行所需要的虚拟机环境（必填）
+    runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && contains(github.event.head_commit.message, '[build]')}}
 
     steps:
       - name: Checkout
-        if: ${{ contains(github.event.head_commit.message, '[build]') }}
-        uses: actions/checkout@master
-      
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16' # 可以根据您的VuePress版本调整Node.js版本
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.yarn
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: vuepress-deploy
-        if: ${{ contains(github.event.head_commit.message, '[build]') }}
-        uses: jenkey2011/vuepress-deploy@master
+        uses: jenkey2011/vuepress-deploy@v1
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_REPO: fncheng/blog
