[build] docs: 添加 dayjs 依赖并在 enhanceApp.js 中配置，更新 Flex 布局和异步任务控制文档

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "@vuepress/types": "^1.9.9",
     "vuepress": "^1.9.9"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
